compiler/tests/fixtures/invalid/semantics/undefined_parent_action.viv
// Child action referencing an undefined parent

action orphan from nonexistent-parent:
    gloss: "nothing to inherit"
